--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "install": "^0.13.0",
     "next": "13.4.19",
+    "npm": "^10.4.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-slick": "^0.30.1",
     "tailwindcss": "3.3.3"
   }
 }
